--- a/todoListWebApplication/src/app/components/home/home.component.html
+++ b/todoListWebApplication/src/app/components/home/home.component.html
@@ -1,23 +1,23 @@
 <div class="page home">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <h2 class="page-title">
                     <img class="svg" src="assets/svg/file.svg">
-                    Todo List App
+                    TodoListApp
                 </h2>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <form class="example-form">
                     <mat-form-field class="example-full-width">
                         <input matInput placeholder="Yapılacak yeni bir iş ekleyin..." #newTodo>
                     </mat-form-field>
                     <button mat-raised-button color="primary" type="submit" (click)="addTodo(newTodo)">Ekle</button>
+                    <button *ngIf="isLoggedin()==true" mat-raised-button color="warn" type="submit" style="margin-left: 3px;" (click)="logOut()">Çıkış</button>    
                 </form>
             </div>
         <div class="col-md-12 mt-3">
             <mat-card class="d-flex">
-
                 <div class="example-container">
                     <h4>Yapılacaklar</h4>
                     <div
